cmake_minimum_required(VERSION 3.0.0)

add_subdirectory("01_SupportClassesForConvenience")
add_subdirectory("02_MemoryModelAndExecutionTime")
add_subdirectory("03_SequentialContainersSTL")
add_subdirectory("04_AlgorithmsSTL")
add_subdirectory("05_AssociativeContainersSTL")
add_subdirectory("06_Multithreading")
add_subdirectory("07_SerializingProtobuf")

